auth/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: auth
spec:
  selector:
    app: users
  ports:
  - port: 8083
    targetPort: 8083
